<resources>
    <string name="app_name">Aston_intensive_6</string>
    <string name="input_your_first_name">input your first name</string>
    <string name="input_your_last_name">input your last name</string>
    <string name="input_your_phone_number">input your phone number</string>
    <string name="save">Save</string>
    <string name="first_name_test">First Name</string>
    <string name="last_name_test">Last Name</string>
    <string name="phone_number_test">Phone Number</string>
    <string name="name">Name:</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name:</string>
    <string name="last_name2">Last name</string>
    <string name="phone_number">Phone Number:</string>
    <string name="phone_number2">Phone Number</string>
</resources>